<resources>
    <string name="action_settings">Settings</string>
    <string name="title_activity_list_steps">ListStepsActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_build_step">BuildStepActivity</string>
    <string name="recipe_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis massa ut mauris fermentum, sed condimentum neque ultricies. Nunc tellus odio, tempor eget lorem et, pharetra pretium justo. Maecenas sed elit vel dui faucibus tristique ac at ex. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam orci velit, posuere eget dui non, molestie malesuada erat. In eu fringilla dolor, et porttitor tortor. Praesent cursus sapien sed eleifend semper. Proin accumsan ultricies finibus. Integer eget est elementum, malesuada nibh eget, vestibulum quam. Ut eu ultrices enim. Praesent dui tortor, mollis in placerat id, sodales id nibh. Fusce laoreet velit nec lacus viverra imperdiet. Quisque ut nibh malesuada, molestie arcu a, posuere lorem. Suspendisse dolor augue, sodales nec nisi sed, fermentum accumsan risus. Nunc fringilla, nibh in ultricies auctor, enim augue tempus nisi, eget vestibulum neque sem vitae lorem. Proin aliquam rhoncus nulla, sed fermentum odio aliquam vitae. Duis nec dolor ligula. Aliquam et mollis leo. Sed sapien quam, ultricies nec tortor eu, pulvinar aliquam odio. Integer vel venenatis ante.Aenean vel tempus nisi, vel efficitur lorem. Curabitur interdum cursus risus sit amet varius. Maecenas at turpis sed orci laoreet eleifend. Suspendisse potenti. Nam aliquet turpis sed tellus aliquet gravida. Duis vitae quam est. In convallis interdum mauris, aliquet sodales odio dignissim sit amet. Nam faucibus accumsan ipsum, vitae interdum mi eleifend sit amet. Curabitur condimentum tristique velit ut molestie. Aliquam augue augue, interdum sit amet risus in, consequat placerat elit. Maecenas aliquam, nisl eget imperdiet ultricies, velit lacus dictum ipsum, nec rutrum metus diam eu velit. Nullam ac est sem.Pellentesque dui tellus, viverra ut lectus sit amet, rhoncus interdum diam. Integer in scelerisque arcu, bibendum facilisis sapien. Fusce dapibus a nulla eget tincidunt. Nunc dignissim diam et dui interdum scelerisque. Aenean eget orci a metus finibus sagittis vel id erat. Ut tristique odio non erat efficitur tempor. Duis eget maximus velit, vel efficitur nisl. Etiam non suscipit tellus. Donec consectetur diam quam, vel luctus libero eleifend sit amet. Suspendisse nec faucibus tortor, id convallis ex. Fusce ullamcorper sodales felis, at consectetur tortor vehicula ac. Mauris quis lacus mattis, tincidunt nulla nec, rutrum tellus. Integer laoreet, ipsum at interdum fringilla, erat turpis convallis justo, quis sodales erat diam id nunc. Nullam sit amet suscipit turpis. Mauris rutrum nisl lacus, at luctus nisi ultricies eget. Nam nec nulla nisi. Pellentesque non nisi arcu. Mauris posuere tempus augue in rhoncus. Curabitur nec volutpat neque, sit amet viverra massa.\n</string>
    <string name="title_activity_add_ingredients">AddIngredientsActivity</string>
    <string name="title_activity_build">BuildActivity</string>
    <string name="app_name">&lt;CookingBuddy</string>
    <string name="search_title">Search</string>
    <string name="title_name">Title</string>
    <string name="ingredient_name">Ingredients</string>
    <string name="user_name">Username</string>
    <string name="title_hint">mss famous fried rice</string>
    <string name="ingredient_hint">eggs, tomatoes,...</string>
    <string name="username_hint">mss13, mike,...</string>
    <string name="search_button">SEARCH</string>
    <string name="search_results_title">Results</string>
    <string name="recipe_title">Recipes</string>
    <string name="user_title">Users</string>
    <string name="search_error">Please fill in one of the search options!</string>
    <string name="titleBuild">Build</string>
    <string name="titleSearch">Search</string>
    <string name="titleMyRecipes">My Recipes</string>
    <string name="titleMyFriends">My Friends</string>
    <string name="savedRecipes">Saved Recipes</string>
    <string name="fromFriends">From Friends</string>
    <string name="userName">MSS133 Recipes</string>
    <string name="prompt_email">name</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This name address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing name
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
