<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dip">

    <TextView
        android:id="@+id/search_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_title"
        android:textSize="30dip"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/title_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_name"
        android:textSize="20dip"
        android:paddingTop="50dip"
        android:layout_below="@id/search_title" />

    <EditText
        android:id="@+id/title_field"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:hint="@string/title_hint"
        android:layout_alignBaseline="@+id/title_name"
        android:layout_toRightOf="@+id/title_name"
        android:layout_marginLeft="80dp" />

    <TextView
        android:id="@+id/ingredient_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredient_name"
        android:textSize="20dip"
        android:paddingTop="50dip"
        android:layout_below="@id/title_name" />

    <EditText
        android:id="@+id/ingredient_field"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:hint="@string/ingredient_hint"
        android:layout_alignBaseline="@+id/ingredient_name"
        android:layout_alignBottom="@+id/ingredient_name"
        android:layout_alignLeft="@+id/title_field"
        android:layout_alignStart="@+id/title_field" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textSize="20dip"
        android:paddingTop="50dip"
        android:layout_below="@id/ingredient_name" />

    <EditText
        android:id="@+id/user_field"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:hint="@string/username_hint"
        android:layout_alignBaseline="@+id/user_name"
        android:layout_alignBottom="@+id/user_name"
        android:layout_alignLeft="@+id/ingredient_field"
        android:layout_alignStart="@+id/ingredient_field" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:text="@string/search_button"
        android:layout_below="@+id/user_field"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:onClick="newView" />

    <TextView
        android:id="@+id/error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_button"
        android:layout_alignParentBottom="true"
        android:gravity="center" />
        <!--android:text="Please fill in one of the search options!"-->
        />
</RelativeLayout>
